[tool.poetry]
name = "tz-em"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tz_em"}]

[tool.poetry.dependencies]
python = "^3.9"
simple-term-menu = "^1.6.1"
pandas = "^2.0.3"
tabulate = "^0.9.0"
pydantic = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
